[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bg/bkg.png" type="Texture" id=1]
[ext_resource path="res://assets/bg/FishTankTetris_BGdesign02.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://SwipeControl.gd" type="Script" id=4]
[ext_resource path="res://MobileJoyStick.tscn" type="PackedScene" id=5]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1000, 1500 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1747.42, 1084.34 )
scale = Vector2( 1.11441, 1.11441 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -1579.27, -975.305 )
region_rect = Rect2( 460.536, 96.5765, 325.058, 74.4626 )

[node name="ShapesArea" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.32549 )
position = Vector2( 96, 87 )
scale = Vector2( 1.5575, 1.5575 )
texture = ExtResource( 1 )
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ShapesArea2" type="Sprite" parent="."]
modulate = Color( 0.564706, 0.639216, 0.678431, 0.643137 )
self_modulate = Color( 1, 0, 0, 0 )
position = Vector2( 96, 87 )
scale = Vector2( 1.5575, 1.5575 )
texture = ExtResource( 1 )
centered = false

[node name="SwipeScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -86.9999, -50 )
scale = Vector2( 45.4459, 42.4158 )
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="Transition" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="use_move_vector" from="CanvasLayer" to="." method="_on_CanvasLayer_use_move_vector"]
